test/runnable/ultimatetest.d

void main() {
    import std.stdio : File;

    File file;
    file = File.init;
}
