test/fail_compilation/fail261.d
import std.stdio;

struct MyRange
{
}


void main()
{
    MyRange range;

    foreach (r; range)
    {
        writefln("%s", r.toString());
    }
}
